--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,7 +11,7 @@ SET(_sources_cc Alias.cc Annotation.cc Artist.cc ArtistCredit.cc Attribute.cc CD
 	Disc.cc Entity.cc FreeDBDisc.cc HTTPFetch.cc ISRC.cc Label.cc LabelInfo.cc Lifespan.cc List.cc
 	Medium.cc MediumList.cc Message.cc Metadata.cc NameCredit.cc NonMBTrack.cc Offset.cc PUID.cc
 	Query.cc Rating.cc Recording.cc Relation.cc RelationList.cc Release.cc ReleaseGroup.cc Tag.cc
-	TextRepresentation.cc Track.cc UserRating.cc UserTag.cc Work.cc xmlParser.cc
+	TextRepresentation.cc Track.cc UserRating.cc UserTag.cc Work.cc xmlParser.cc jsonparser.cc
 	RelationListList.cc ISWCList.cc ISWC.cc SecondaryType.cc SecondaryTypeList.cc IPI.cc
 	ReleaseEvent.cc ReleaseEventList.cc Area.cc Iso3166_1CodeList.cc Iso3166_1Code.cc)
 SET(_sources_c mb5_c.cc)
